# ChangeLog for media-video/mpv
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mpv/ChangeLog,v 1.122 2015/03/19 02:56:40 dlan Exp $

*mpv-0.8.3 (19 Mar 2015)

  19 Mar 2015; Yixun Lan <dlan@gentoo.org> +mpv-0.8.3.ebuild, mpv-9999.ebuild,
  metadata.xml:
  version bump, new USE=rubberband, fix media-libs/libass dep, bug 540602,
  proxy for Nikoli

  12 Mar 2015; Jeroen Roovers <jer@gentoo.org> mpv-0.7.3.ebuild,
  mpv-0.8.0.ebuild, mpv-0.8.2.ebuild:
  Marked ~hppa (bug #538802).

  07 Mar 2015; Ben de Groot <yngwin@gentoo.org> mpv-0.8.2.ebuild:
  Add RELEASE_NOTES to DOCS (bug #542344)

*mpv-0.8.2 (05 Mar 2015)

  05 Mar 2015; Ben de Groot <yngwin@gentoo.org> +mpv-0.8.2.ebuild, metadata.xml:
  version bump

  03 Mar 2015; Yixun Lan <dlan@gentoo.org> mpv-0.8.0.ebuild:
  add arm64 support, tested on A53 board

*mpv-0.8.0 (22 Feb 2015)

  22 Feb 2015; Ben de Groot <yngwin@gentoo.org> +mpv-0.8.0.ebuild,
  -mpv-0.3.11.ebuild, mpv-0.3.10.ebuild, mpv-0.3.11-r1.ebuild, mpv-0.7.3.ebuild,
  mpv-9999.ebuild:
  Version bump. The postproc and portaudio options have been removed upstream.
  Make repoman happy by adding a := slot on lua.

  04 Feb 2015; Ben de Groot <yngwin@gentoo.org> mpv-0.7.3.ebuild:
  Drop keywords on mpv-0.7.3 for arches that do not have ffmpeg-2.2 keyworded
  (bug #538802)

  03 Feb 2015; Ben de Groot <yngwin@gentoo.org> -mpv-0.6.2.ebuild,
  -mpv-0.7.1.ebuild, -mpv-0.7.2-r1.ebuild, -mpv-0.7.2.ebuild:
  remove old

*mpv-0.7.3 (03 Feb 2015)

  03 Feb 2015; Ben de Groot <yngwin@gentoo.org> +mpv-0.7.3.ebuild:
  version bump

*mpv-0.3.11-r1 (01 Feb 2015)
*mpv-0.7.2-r1 (01 Feb 2015)

  01 Feb 2015; Michał Górny <mgorny@gentoo.org> +mpv-0.3.11-r1.ebuild,
  +mpv-0.7.2-r1.ebuild, mpv-9999.ebuild:
  Introduce USE=libav to control the preferred implementation. Fixes subslot &
  implementation switch rebuilds as well.

  05 Jan 2015; Yixun Lan <dlan@gentoo.org> mpv-9999.ebuild: