@@ -3,12 +3,12 @@ DEPEND=libav? ( >=media-video/libav-10:0=[encode?,threads,vaapi?,vdpau?] ) !liba
 DESCRIPTION=Media player based on MPlayer and mplayer2
 EAPI=5
 HOMEPAGE=http://mpv.io/
-IUSE=+alsa bluray bs2b cdio +cli -doc-pdf dvb +dvd dvdnav egl +enca encode +iconv jack -joystick jpeg ladspa lcms +libass libav libcaca libguess libmpv lirc lua luajit +mpg123 -openal +opengl oss pulseaudio pvr samba -sdl selinux v4l vaapi vdpau vf-dlopen wayland +X xinerama +xscreensaver xv
+IUSE=+alsa bluray bs2b cdio +cli doc-pdf dvb +dvd dvdnav egl +enca encode +iconv jack -joystick jpeg ladspa lcms +libass libav libcaca libguess libmpv lirc lua luajit +mpg123 -openal +opengl oss pulseaudio pvr samba -sdl selinux v4l vaapi vdpau vf-dlopen wayland +X xinerama +xscreensaver xv
 KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux
-LICENSE=GPL-2
+LICENSE=GPL-2+ BSD ISC
 RDEPEND=libav? ( >=media-video/libav-10:0=[encode?,threads,vaapi?,vdpau?] ) !libav? ( >=media-video/ffmpeg-2.1.4:0=[encode?,threads,vaapi?,vdpau?] ) sys-libs/zlib X? ( x11-libs/libX11 x11-libs/libXext >=x11-libs/libXrandr-1.2.0 opengl? ( virtual/opengl egl? ( media-libs/mesa[egl] ) ) lcms? ( >=media-libs/lcms-2.6:2 ) vaapi? ( >=x11-libs/libva-0.34.0[X(+),opengl?] ) vdpau? ( >=x11-libs/libvdpau-0.2 ) xinerama? ( x11-libs/libXinerama ) xscreensaver? ( x11-libs/libXScrnSaver ) xv? ( x11-libs/libXv ) ) alsa? ( >=media-libs/alsa-lib-1.0.18 ) bluray? ( >=media-libs/libbluray-0.3.0 ) bs2b? ( media-libs/libbs2b ) cdio? ( dev-libs/libcdio dev-libs/libcdio-paranoia ) dvb? ( virtual/linuxtv-dvb-headers ) dvd? ( >=media-libs/libdvdread-4.1.3 dvdnav? ( >=media-libs/libdvdnav-4.2.0 ) ) enca? ( app-i18n/enca ) iconv? ( virtual/libiconv ) jack? ( media-sound/jack-audio-connection-kit ) jpeg? ( virtual/jpeg:0 ) ladspa? ( media-libs/ladspa-sdk ) libass? ( >=media-libs/libass-0.9.10:=[enca?,fontconfig] virtual/ttf-fonts ) libcaca? ( >=media-libs/libcaca-0.99_beta18 ) libguess? ( >=app-i18n/libguess-1.0 ) lirc? ( app-misc/lirc ) lua? ( !luajit? ( >=dev-lang/lua-5.1:= ) luajit? ( dev-lang/luajit:2 ) ) mpg123? ( >=media-sound/mpg123-1.14.0 ) openal? ( >=media-libs/openal-1.13 ) pulseaudio? ( media-sound/pulseaudio ) samba? ( net-fs/samba ) sdl? ( media-libs/libsdl2[threads] ) v4l? ( media-libs/libv4l ) wayland? ( >=dev-libs/wayland-1.6.0 media-libs/mesa[egl,wayland] >=x11-libs/libxkbcommon-0.3.0 ) selinux? ( sec-policy/selinux-mplayer )
 REQUIRED_USE=|| ( cli libmpv ) dvdnav? ( dvd ) egl? ( opengl X ) enca? ( iconv ) lcms? ( opengl ) libguess? ( iconv ) luajit? ( lua ) opengl? ( || ( wayland X ) ) pvr? ( v4l ) vaapi? ( X ) vdpau? ( X ) wayland? ( opengl ) xinerama? ( X ) xscreensaver? ( X ) xv? ( X )
 SLOT=0
 SRC_URI=http://ftp.waf.io/pub/release/waf-1.8.4 https://github.com/mpv-player/mpv/archive/v0.8.3.tar.gz -> mpv-0.8.3.tar.gz
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	pax-utils	dfe060cb70d89757fde5c1ff8405e950	python-any-r1	da352ea9da8eb9bf158d56cca65d6c82	python-utils-r1	e3288bc2e6e487674ce218b632701c9e	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	waf-utils	b5ddb40c4095c9a1a3f6fd49d32fd922
-_md5_=32fd22b774d222b259263c39ecda01d3
+_md5_=9432166270134073872f9b71525d2b6b
