@@ -1,6 +1,16 @@
 # ChangeLog for media-video/mpv
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mpv/ChangeLog,v 1.122 2015/03/19 02:56:40 dlan Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mpv/ChangeLog,v 1.124 2015/03/19 11:24:39 yngwin Exp $
+
+  19 Mar 2015; Ben de Groot <yngwin@gentoo.org> metadata.xml:
+  Add myself as maintainer
+
+  19 Mar 2015; Ben de Groot <yngwin@gentoo.org> mpv-0.8.3.ebuild,
+  mpv-9999.ebuild:
+  Add message about upstream recommendation for ffmpeg. Add more license
+  information (bug #506946). Remove useless - for doc-pdf useflag again.
+  Reformat lines for live ebuild. Move some stuff from src_unpack to
+  src_prepare.
 
 *mpv-0.8.3 (19 Mar 2015)
 
